--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <a id="about" href="">About</a>
-        <a id="store" href="">Store</a>
-        <a id="images" href="">Images</a>
-        <a id="gmail" href="">Gmail</a>
+        
         <link href="Styles/style.css" rel="stylesheet">
         <title> Google Homepage Project </title>
     </head>
     <body>
-        <img id="google-logo" src="images-google/logo.png"> 
-        <img id="nine-dots" src="images-google/9-dots.jpeg"
+        <div id="header">
+            <div id="top-left">
+                <a id="about" href="">About</a>
+                <a id="store" href="">Store</a>
+            </div>
+            <div id="top-right">
+                <a id="gmail" href="">Gmail</a>
+                <a id="images" href="">Images</a>
+                <img id="nine-dots" src="images-google/nine-dots.png" width= "55" height= "35">
+                <button>Sign In</button>
+            </div>
+        </div>
+        <div id="center">  
+            <div>
+                <img  src="images-google/logo.png"> 
+            </div>
+            <div id="search-bar">
+                <input type="text">
+            </div>
+            <div>
+                <button>Googe Search</button>
+                <button>I'm feeling lucky</button>
+            </div>
+            
+        </div>    
     </body>
 </html>
