--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <div>
                 <img  src="images-google/logo.png"> 
             </div>
-            <div id="search-bar">
+            <div id="search">
                 <input type="text">
+                <img id="search-icon" src="images-google/search-icon.png" width="45" height="45">
             </div>
             <div>
                 <button>Googe Search</button>
