--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
             </div>
             <div id="search">
                 <input type="text">
-                <img id="search-icon" src="images-google/search-icon.png" width="45" height="45">
+                <img id="search-icon" src="images-google/search-icon.png" width="40" height="40">
             </div>
             <div>
-                <button>Googe Search</button>
-                <button>I'm feeling lucky</button>
+                <button id="search-button" onclick="window.location.href='https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwiT0fTGzbLvAhVZVc0KHR0JDLAQPAgI';">Googe Search</button>
+                <button id="lucky-button" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ';">I'm feeling lucky</button>
             </div>
-            
-        </div>    
+        </div>   
+        <div id="footer">
+            <footer>
+                <p>
+                    Carbon neutral since 2007
+                </p>
+            </footer>
+        </div> 
     </body>
 </html>
