--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <body>
         <div id="header">
             <div id="top-left">
-                <a id="about" href="">About</a>
-                <a id="store" href="">Store</a>
+                <a id="about" href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+                <a id="store" href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
             </div>
             <div id="top-right">
-                <a id="gmail" href="">Gmail</a>
-                <a id="images" href="">Images</a>
-                <img id="nine-dots" src="images-google/nine-dots.png" width= "55" height= "35">
-                <button>Sign In</button>
+                <a id="gmail" href="https://mail.google.com/mail/&ogbl">Gmail</a>
+                <a id="images" href="https://www.google.com/imghp?hl=en&ogbl">Images</a>
+                <img id="nine-dots" src="images-google/nine-dots.png" width= "55" height= "30">
+                <button id="sign-in" onclick="window.location.href='https://accounts.google.com/ServiceLogin?service=searchandassistant&passive=1209600&continue=https://www.google.com/search?q%3Dgoogle%2Bhomepage%26safe%3Dstrict%26source%3Dlnms%26tbm%3Disch%26biw%3D1200%26bih%3D854%26sfr%3Dvfe&followup=https://www.google.com/search?q%3Dgoogle%2Bhomepage%26safe%3Dstrict%26source%3Dlnms%26tbm%3Disch%26biw%3D1200%26bih%3D854%26sfr%3Dvfe&ec=GAZAAg';">Sign In</button>
             </div>
         </div>
         <div id="center">  
@@ -24,7 +24,7 @@
             </div>
             <div id="search">
                 <input type="text">
-                <img id="search-icon" src="images-google/search-icon.png" width="40" height="40">
+                <img id="search-icon" src="images-google/search-icon.png" width="35" height="35">
             </div>
             <div>
                 <button id="search-button" onclick="window.location.href='https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwiT0fTGzbLvAhVZVc0KHR0JDLAQPAgI';">Googe Search</button>
@@ -33,9 +33,10 @@
         </div>   
         <div id="footer">
             <footer>
-                <p>
-                    Carbon neutral since 2007
-                </p>
+                <div>
+                    <img id="leaf" src="images-google/leaf.png"> <span>Carbon neutral since 2007</span> 
+                </div>
+                
             </footer>
         </div> 
     </body>
